flowc/tests/fixtures/check_e140_return_mismatch.flow
type User = { id: string }
type Plan = { id: string }

tool make_plan() -> Plan
  effect deterministic

flow demo(User) -> User {
  p = make_plan()
  p
}
